# nanocode

./: .gitignore  Cargo.toml  README.md
config/prompts/families/qwen3/: agent_build.md  agent_default.md  agent_plan.md  subagent_explore.md
nanocode-cli/: Cargo.toml
nanocode-cli/src/: main.rs  setup.rs  tui.rs
nanocode-cli/src/tui/: attachments.rs  clipboard.rs  commands.rs  render.rs  rewind.rs  runtime.rs  state.rs  stream.rs  terminal.rs  worker.rs
nanocode-core/: Cargo.toml
nanocode-core/src/: agent_loop.rs  agents.rs  config.rs  interrupt.rs  lib.rs  middleware.rs  prompts.rs  session.rs  skills.rs  types.rs
nanocode-core/src/llm/: chat_template.rs  format.rs  inference.rs  mod.rs  openai_server.rs
nanocode-core/src/tools/: ask_user_question.rs  base.rs  bash.rs  grep.rs  manager.rs  mcp.rs  mod.rs  path_utils.rs  read_file.rs  search_replace.rs  task.rs  write_file.rs
nanocode-hf/: Cargo.toml
nanocode-hf/src/: catalog.rs  downloader.rs  hardware.rs  lib.rs  quant_catalog.rs  quantization.rs  registry.rs
skills/frontend-design/: SKILL.md
skills/javascript-backend/: SKILL.md
