[package]
name = "nanocode-hf"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
dirs.workspace = true

# Async streams
futures = "0.3"
futures-util = "0.3"

# Progress bars
indicatif = "0.17"

# System info
sysinfo = "0.32"
num_cpus = "1"

# SHA256 for verification
sha2 = "0.10"

# Multipart for downloads
flate2 = "1"

[dev-dependencies]
tokio.workspace = true
